--- a/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/report/component/report-call/report-call.component.sass
@@ -177,9 +177,9 @@ table
     position: absolute
     right: 10px
     z-index: 10
-    background-color: white
     .calendar
         width: 300px
+        position: relative
     .btnSort
         width: 150px
         border-radius: 20px
