--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.html
@@ -1,4 +1,5 @@
 <mat-card class="mat-elevation-z1">
+  <div class="overlay" [class.opened]="_isMobile() && _filterOpened"></div>
   <mat-card-header>
     <mat-card-title class="card-title">Проверка звонков</mat-card-title>
     <div id="fountainG" [hidden]="hiddenloader">
@@ -10,40 +11,50 @@
       <div id="fountainG_6" class="fountainG"></div>
       <div id="fountainG_7" class="fountainG"></div>
       <div id="fountainG_8" class="fountainG"></div>
-    </div>  
+    </div>
   </mat-card-header>
-  <div class="filter clearfix">
-    <input (keyup)="applyFilterNumberOrname($event.target.value)" placeholder="Телефон или Название">
-    <input (keyup)="applyFilterDuration($event.target.value)" placeholder="Продолжительность">
-    <select [(ngModel)]="direction" (ngModelChange)="changeDirection()">
-      <option [ngValue]=0>Все направления</option>
-      <option [ngValue]=1>Исходящие</option>
-      <option [ngValue]=2>Входящие</option>
-    </select>
-    <select [(ngModel)]="selectedManager" (ngModelChange)="changeManager()">
-      <option selected [ngValue]=0>Все менеджера</option>
-      <option *ngFor="let elm of managers" [ngValue]=elm.id>{{elm.login}}</option>
-    </select>
-    <button (click)="hiddenCalendar()">{{btnDate}}</button>
-    <div [hidden]="calendarHidden" class="blockCalendar">
-      <div class="calendar">
-        <igx-calendar (onSelection)="verifyRange($event)" selection="range"></igx-calendar>
-      </div>
-      <div class="sortbloc">
-        <button (click)="sortDateCall(1)" class="btnSort">За всё время</button><br />
-        <button (click)="sortDateCall(2)" class="btnSort">За Сегодня</button><br />
-        <button (click)="sortDateCall(3)" class="btnSort">За Вчера</button><br />
-        <button (click)="sortDateCall(4)" class="btnSort">За Последние 7 Дней</button><br />
-        <button (click)="sortDateCall(5)" class="btnSort">3а Последние 30 Дней</button><br />
-        <button (click)="sortDateCall(6)" class="btnSort">За Текущюю неделю</button><br />
-        <button (click)="sortDateCall(7)" class="btnSort">За Текущий Месяц</button><br />
-        <button (click)="sortDateCall(8)" class="btnSort">За Текущий год</button><br />
+
+  <div class="filter-container" [class.opened]="_filterOpened">
+    <div class="filter clearfix">
+      <input (keyup)="applyFilterNumberOrname($event.target.value)" placeholder="Телефон или Название">
+      <input (keyup)="applyFilterDuration($event.target.value)" placeholder="Продолжительность">
+      <select [(ngModel)]="direction" (ngModelChange)="changeDirection()">
+        <option [ngValue]=0>Все направления</option>
+        <option [ngValue]=1>Исходящие</option>
+        <option [ngValue]=2>Входящие</option>
+      </select>
+      <select [(ngModel)]="selectedManager" (ngModelChange)="changeManager()">
+        <option selected [ngValue]=0>Все менеджера</option>
+        <option *ngFor="let elm of managers" [ngValue]=elm.id>{{elm.login}}</option>
+      </select>
+      <button (click)="hiddenCalendar()">{{btnDate}}</button>
+      <div [hidden]="calendarHidden" class="blockCalendar">
+        <div class="calendar">
+          <igx-calendar (onSelection)="verifyRange($event)" selection="range"></igx-calendar>
+        </div>
+        <div class="sortbloc">
+          <button (click)="sortDateCall(1)" class="btnSort">За всё время</button><br />
+          <button (click)="sortDateCall(2)" class="btnSort">За Сегодня</button><br />
+          <button (click)="sortDateCall(3)" class="btnSort">За Вчера</button><br />
+          <button (click)="sortDateCall(4)" class="btnSort">За Последние 7 Дней</button><br />
+          <button (click)="sortDateCall(5)" class="btnSort">3а Последние 30 Дней</button><br />
+          <button (click)="sortDateCall(6)" class="btnSort">За Текущюю неделю</button><br />
+          <button (click)="sortDateCall(7)" class="btnSort">За Текущий Месяц</button><br />
+          <button (click)="sortDateCall(8)" class="btnSort">За Текущий год</button><br />
+        </div>
       </div>
     </div>
   </div>
+
+  <div class="filter-button-container" *ngIf="_isMobile()">
+    <div class="filter-button">
+      <button mat-icon-button (click)="_toggleSidebar()">
+        <img [src]="_getFilterIcon()" height="30" width="30" />
+      </button>
+    </div>
+  </div>
+
   <div class="bodyAll">
-
-
     <mat-paginator [pageSizeOptions]="[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]" showFirstLastButtons></mat-paginator>
     <table mat-table [dataSource]="dataSource" matSort>
 
@@ -53,8 +64,8 @@
       </ng-container>
 
       <ng-container matColumnDef="statusCall">
-        <th colspan="4" mat-header-cell *matHeaderCellDef>Статус</th>
-        <td colspan="4" mat-cell *matCellDef="let element">
+        <th colspan="3" mat-header-cell *matHeaderCellDef>Статус</th>
+        <td colspan="3" mat-cell *matCellDef="let element">
           <div class="action-circle" [style.background]="getActionColor(element)">
           </div>
         </td>
@@ -63,10 +74,14 @@
       <ng-container matColumnDef="direction">
         <th colspan="4" mat-header-cell *matHeaderCellDef>Статус звонка</th>
         <td colspan="4" mat-cell *matCellDef="let element">
-          <img src="Icon/yesIncoming.png" height="30" width="30" *ngIf="element.direction == 'Исходящий' && element.durations != 0" />
-          <img src="Icon/yesOutgoing.png" height="30" width="30" *ngIf="element.direction == 'Входящий' && element.durations != 0" />
-          <img src="Icon/noOutgoing.png" height="30" width="30" *ngIf="element.direction == 'Входящий' && element.durations == 0" />
-          <img src="Icon/noIncoming.png" height="30" width="30" *ngIf="element.direction == 'Исходящий' && element.durations == 0" />
+          <img src="Icon/yesIncoming.png" height="40" width="40"
+            *ngIf="element.direction == 'Исходящий' && element.durations != 0" />
+          <img src="Icon/yesOutgoing.png" height="40" width="40"
+            *ngIf="element.direction == 'Входящий' && element.durations != 0" />
+          <img src="Icon/noOutgoing.png" height="40" width="40"
+            *ngIf="element.direction == 'Входящий' && element.durations == 0" />
+          <img src="Icon/noIncoming.png" height="40" width="40"
+            *ngIf="element.direction == 'Исходящий' && element.durations == 0" />
         </td>
       </ng-container>
 
@@ -76,26 +91,31 @@
       </ng-container>
 
       <ng-container matColumnDef="phone">
-        <th colspan="4" mat-header-cell *matHeaderCellDef>Номер тел</th>
-        <td colspan="4" mat-cell *matCellDef="let element">{{element.phone}}</td>
+        <th colspan="6" mat-header-cell *matHeaderCellDef>Номер тел</th>
+        <td colspan="6" mat-cell *matCellDef="let element">{{element.phone}}</td>
       </ng-container>
 
       <ng-container matColumnDef="duration">
-        <th colspan="4" mat-header-cell *matHeaderCellDef>Продолжи..</th>
+        <th colspan="4" mat-header-cell *matHeaderCellDef>Время звонка</th>
         <td colspan="4" mat-cell *matCellDef="let element" style="max-width: 300px">{{element.durations}} Сек</td>
       </ng-container>
 
       <ng-container matColumnDef="date">
-        <th colspan="4" mat-header-cell *matHeaderCellDef>Дата</th>
-        <td colspan="4" mat-cell *matCellDef="let element">{{element.date}}</td>
+        <th colspan="7" mat-header-cell *matHeaderCellDef>Дата</th>
+        <td colspan="7" mat-cell *matCellDef="let element">{{element.date}}</td>
       </ng-container>
 
       <ng-container matColumnDef="comentCon">
         <th colspan="14" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
         <td colspan="14" mat-cell *matCellDef="let element">
-          <textarea *ngIf="element.contactType != 50" style="max-width:300px;height:60px;margin:0px;width:200px;">{{element.callsComments?.comment}}</textarea><br />
-          <button *ngIf="element.contactType != 50" (click)="setNoAccept($event, element.id, element.clientId)" class="btnAccept">Отклонить</button>
-          <button *ngIf="element.contactType != 50" (click)="setAccept($event, element.id, element.clientId)" class="btnAccept">Исправлено</button>
+          <textarea *ngIf="element.contactType != 50"
+            class="textComment">{{element.callsComments?.comment}}</textarea><br />
+          <div class="btnContainer">
+            <button *ngIf="element.contactType != 50" (click)="setNoAccept($event, element.id, element.clientId)"
+              class="btnAccept btnReject">Отклонить</button>
+            <button *ngIf="element.contactType != 50" (click)="setAccept($event, element.id, element.clientId)"
+              class="btnAccept btnFixed">Исправлено</button>
+          </div>
         </td>
       </ng-container>
 
@@ -105,8 +125,13 @@
       </ng-container>
 
       <ng-container matColumnDef="refAudio">
-        <th colspan="14" mat-header-cell *matHeaderCellDef>Аудио запись</th>
-        <td colspan="14" mat-cell *matCellDef="let element"><audio style="height:20px" controls preload="none" src="{{element.referenceAudioVoice}}"></audio></td>
+        <th class="audio-cell" mat-header-cell *matHeaderCellDef>Аудио запись</th>
+        <td class="audio-cell" mat-cell *matCellDef="let element">
+          <img (click)="playAudio($event, element.id, element.referenceAudioVoice)" class="audio-cell-icon"
+            [src]="_display_audio_icon(element.id)" />
+          <audio class="audio-cell audio-cell-play" style="height:20px" controls preload="none"
+            src="{{element.referenceAudioVoice}}"></audio>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
