--- a/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.html
@@ -33,7 +33,8 @@
 
         <ng-container matColumnDef="title">
           <th colspan="4" mat-header-cell *matHeaderCellDef>Название</th>
-          <td colspan="4" mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}} </td>
+          <td colspan="4" mat-cell *matCellDef="let element" style="color: #324A60; max-width: 300px">{{element.title}}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="phone">
@@ -62,11 +63,13 @@
         </ng-container>
 
         <ng-container matColumnDef="comentCon">
-          <th colspan="14" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
-          <td colspan="14" mat-cell *matCellDef="let element">
-            <textarea style="width:350px;height:60px;">{{element.callsComments?.comment}}</textarea><br />
-            <button (click)="setNoAccept($event, element.id)" class="btnAccept">Отклонить</button>
-            <button (click)="setAccept($event, element.id)" class="btnAccept">Исправлено</button>
+          <th colspan="10" mat-header-cell *matHeaderCellDef>Комментарий контролера</th>
+          <td colspan="10" mat-cell *matCellDef="let element">
+            <textarea style="width:100%;height:60px;margin-top: 15px">{{element.callsComments?.comment}}</textarea><br />
+            <div class="btnContainer">
+              <button (click)="setNoAccept($event, element.id)" class="btnAccept btnReject">Отклонить</button>
+              <button (click)="setAccept($event, element.id)" class="btnAccept btnFixed">Исправлено</button>
+            </div>
           </td>
         </ng-container>
 
