--- a/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/clients-accept/client-accept/client-accept.component.sass
@@ -99,6 +99,9 @@ th
     cursor: pointer
     margin-bottom: 5px
     margin-right: 3px
+    flex-basis: 50%
+    padding-left: 6px
+    padding-right: 6px
 .filter
     margin: 0 20px
     text-align: right
@@ -278,4 +281,23 @@ th
     -moz-transform: scale(0.3)
     background-color: rgb(145, 125, 209)
 
+.btnContainer
+    display: flex
+    margin-bottom: 8px
 
+.btnReject
+    background-color: #ff7777  
+.btnFixed
+    background-color: #8bd88b
+    margin-right: 0
+
+@media screen and (max-width: 1200px)
+  td, th
+    padding-left: 0 !important
+    text-overflow: ellipsis
+    overflow: hidden
+    line-height: 1.5
+  th:hover, 
+  td:hover
+    text-overflow: clip
+    overflow: inherit
