--- a/WebUI/ClientApp/src/app/сontroler/controler.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.sass
@@ -1,6 +1,16 @@
+html
+    min-height:100%
+    position:relative
+
+body
+    height:100%
 
 .wrapper
     padding: 0px 10px
+
+@media screen and (max-width: 820px)
+    .wrapper
+        padding: 0px
 
 .logout
     margin-left: auto
@@ -22,6 +32,21 @@ mat-toolbar
     height: 90px !important
     background-color: #62b4ff !important
     padding: 0px
+    position: relative
+    z-index: 1000
+
+@media screen and (max-width: 820px)
+    mat-toolbar
+        margin-bottom: 20px !important
+
+nav 
+    display: flex
+
+@media screen and (max-width: 820px)
+    nav
+        display: none
+    mat-toolbar .logout
+        display: none
 
 nav a.active
     background-color: white !important
@@ -37,3 +62,87 @@ nav a
 nav a:hover
     color: #4895e4
     transition: .6s
+
+@media screen and (max-width: 1200px)
+    .fa-sign-out-alt
+        margin-left: 0! important
+    nav a
+        margin-right: 0
+
+@media screen and (max-width: 1014px)
+    nav
+        margin-left: 0
+    nav a
+        padding: 10px 20px !important
+    .logout
+        padding-right: 8px
+        padding-left: 8px
+
+@media screen and (max-width: 945px)
+    nav a
+        padding: 10px 12px !important
+
+mat-toolbar .menu-icon
+    margin-left: auto
+    padding-right: 1em
+    display: none
+
+@media screen and (max-width: 820px)
+    mat-toolbar .menu-icon
+        display: block
+
+.sidebar-menu-container.opened
+    transition: top 0.5s
+    -webkit-transition: top 0.5s
+    -moz-transition: top 0.5s
+    top: 90px
+
+.sidebar-menu-container
+    background-color: #fff
+    z-index: 1000
+    position: absolute
+    width: 100%
+    transition: top 0.5s
+    -webkit-transition: top 0.5s
+    -moz-transition: top 0.5s
+    top: -350px
+
+    .sidebar-menu
+        padding: 1em 0em
+
+        .menu-item
+            display: block
+            padding: 0em 1em
+            line-height: 38px
+            cursor: pointer
+
+        .menu-item.active
+            background-color: #62b4ff
+            color: #fff
+            margin-top: -1px
+
+        .menu-item .item-text
+            border-bottom: 1px solid #e6e6e6
+            padding: 0em 1em
+            width: 100%
+            display: block
+
+        .menu-item.active .item-text
+            border-bottom: none
+
+        .logout
+            text-align: center
+            font-size: 20px
+
+            i
+                margin-left: 30px !important
+
+.overlay.opened 
+    position: absolute
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    overflow: hidden
+    z-index: 999
+    background: rgba(0,0,0,0.8)
