--- a/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/plan-task/plan-task/plan-task.component.sass
@@ -89,6 +89,12 @@ th
     background-color: #e7f0f5
     border-radius: 60px
     max-width: 110px
+
+.btnContainer
+    display: flex
+    width: 100%
+    margin-bottom: 8px
+
 .btnAccept
     background-color: #03a9f4
     color: #fff
@@ -99,6 +105,16 @@ th
     cursor: pointer
     margin-bottom: 5px
     margin-right: 3px
+    flex-basis: 50%
+    padding-left: 6px
+    padding-right: 6px
+
+.btnReject
+    background-color: #ff7777  
+.btnFixed
+    background-color: #8bd88b
+    margin-right: 0
+
 .filter
     margin: 0 20px
     text-align: right
@@ -275,3 +291,14 @@ th
     -moz-transform: scale(0.3)
     background-color: rgb(145, 125, 209)
 
+@media screen and (max-width: 1200px)
+  td, th
+    padding-left: 0 !important
+    text-overflow: ellipsis
+    overflow: hidden
+    line-height: 1.5
+
+  th:hover, 
+  td:hover
+    text-overflow: clip
+    overflow: inherit
