--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -35,9 +35,15 @@ th
     line-height: 1.5
 
 .mat-card
-    padding: 0px
-    padding-bottom: 20px
+  padding: 0px
+  padding-bottom: 20px
 
+@media screen and (max-width: 820px)
+  .mat-card-header .mat-card-title
+    margin: 0px
+  .mat-card
+    padding: 0px
+    
 .bodyAll
     margin: 10px
     .manager
@@ -55,6 +61,10 @@ th
     text-transform: uppercase
     color: #4d73a4
     font-weight: bold
+
+@media screen and (max-width: 820px)
+  .card-title
+    padding: 20px 10px
 
 ::ng-deep th.mat-header-cell
     border-bottom: 1px solid #f7f7f7
