--- a/WebUI/ClientApp/src/app/сontroler/controler.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/controler.component.sass
@@ -46,6 +46,10 @@ nav
     nav
         display: none
     mat-toolbar .logout
+        background: #62b4ff
+        color: white
+        height: auto!important
+    mat-toolbar .logout-icon
         display: none
 
 nav a.active
@@ -113,8 +117,9 @@ mat-toolbar .menu-icon
         .menu-item
             display: block
             padding: 0em 1em
-            line-height: 38px
+            line-height: 40px
             cursor: pointer
+            font-size: 20px
 
         .menu-item.active
             background-color: #62b4ff
