--- a/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
+++ b/WebUI/ClientApp/src/app/сontroler/Calls/components/acceptManager/acceptManager.component.sass
@@ -35,15 +35,9 @@ th
     line-height: 1.5
 
 .mat-card
-  padding: 0px
-  padding-bottom: 20px
-
-@media screen and (max-width: 820px)
-  .mat-card-header .mat-card-title
-    margin: 0px
-  .mat-card
     padding: 0px
-    
+    padding-bottom: 20px
+
 .bodyAll
     margin: 10px
     .manager
@@ -61,10 +55,6 @@ th
     text-transform: uppercase
     color: #4d73a4
     font-weight: bold
-
-@media screen and (max-width: 820px)
-  .card-title
-    padding: 20px 10px
 
 ::ng-deep th.mat-header-cell
     border-bottom: 1px solid #f7f7f7
@@ -173,6 +163,7 @@ th
 
 @media screen and (max-width: 820px)
     .filter-container
+      overflow-y: scroll
       position: absolute
       right: -300px
       display: none
@@ -411,3 +402,34 @@ th
   overflow: hidden
   z-index: 996
   background: rgba(0,0,0,0.8)
+
+mat-expansion-panel.mat-expanded
+  border-radius: 0
+  mat-expansion-panel-header
+    background: #62b4ff
+    border-radius: 0
+    color: white
+    .mat-expansion-panel-header-title 
+      color: white
+      font-size: 18px
+
+.table-expansion-element-body
+  margin-top: 20px
+  .element-item
+    line-height: 30px
+  b
+    margin-right: 10px
+  .statusCall
+    display: flex
+    .action-circle
+      margin-top: 7px
+  .direction b
+    vertical-align: top
+  .refAudio
+    .audio-cell
+      width: 100%
+
+.mat-expansion-panel
+  border: none
+  border-bottom: 1px solid #e6e6e6
+  box-shadow: none
